--- a/src/index.css
+++ b/src/index.css
@@ -203,30 +203,30 @@ ul {
   font-size: 0.75rem;
 }
 
-/* Favorites */
-.favorites {
+/* favourites */
+.favourites {
   background: var(--black);
   color: var(--white);
   padding: 1rem 0;
 }
 
-.favorites-content {
+.favourites-content {
   width: var(--view-width);
   max-width: var(--max-width);
   margin: 0 auto;
 }
 
-.favorites-container {
+.favourites-container {
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
 }
 
-.favorite-item {
+.favourite-item {
   text-align: center;
 }
 
-.favorites-img {
+.favourites-img {
   width: 60px;
   border-radius: 50%;
   border: 5px solid var(--white);
@@ -239,12 +239,12 @@ ul {
   color: var(--white);
   border: transparent;
   cursor: pointer;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
   transition: var(--transition);
 }
 
 .remove-btn:hover {
-  color: var(--red-dark)
+  color: red
 }
 
 /* Meals */
@@ -358,8 +358,8 @@ ul {
 
 .modal-content a {
   display: block;
+  margin-right: 1rem;
   color: var(--primary-500);
-  margin-bottom: 1rem;
   text-decoration: underline;
   transition: var(--transition);
 }
@@ -387,4 +387,10 @@ ul {
   align-items: center;
   margin-top: 1rem;
   cursor: pointer;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
