--- a/src/index.css
+++ b/src/index.css
@@ -226,6 +226,10 @@ ul {
 }
 
 .favourite-item {
+  display: flex;  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
