feat: added dynamic fav button

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,12 @@ ul {
   display: inline-block;
 }
 
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .btn:hover {
   background: var(--primary-700);
   box-shadow: var(--shadow-3);
